--- a/index.html
+++ b/index.html
@@ -14,43 +14,45 @@
 
       <figure class="photo">
         <img class="img-flex" src="images/venus.jpg" alt="">
-        <figcaption>A real-colour image of Venus.</figcaption>
+        <figcaption class="italic">A real-colour image of Venus.</figcaption>
       </figure>
+      <div class="text-left">
+        <div class="max-length">
+          <div class="info">
+            <h1 class="yotta">Venus</h1>
+            <p class="italic">Venus, the second planet in the Solar System.</p>
+            <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
-      <div class="info">
-        <h1 class="micro">Venus</h1>
-        <p>Venus, the second planet in the Solar System.</p>
-        <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
+            <div class="details">
+              <h2 class="micro">Physical characteristics</h2>
+              <dl>
+                <dt>Mean radius</dt>
+                <dd><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
+                <dt>Mass</dt>
+                <dd><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
+                <dt>Surface gravity</dt>
+                <dd><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
+                <dt>Axial tilt</dt>
+                <dd><data value="177.36">177.36°</data></dd>
+              </dl>
+            </div>
 
-        <div class="details">
-          <h2 class="micro">Physical characteristics</h2>
-          <dl>
-            <dt>Mean radius</dt>
-            <dd><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
-            <dt>Mass</dt>
-            <dd><data value="4.8676e+24">4.8676×10<sup>24</sup>&nbsp;kg</data></dd>
-            <dt>Surface gravity</dt>
-            <dd><data value="8.87">8.87&nbsp;m/s<sup>2</sup></data></dd>
-            <dt>Axial tilt</dt>
-            <dd><data value="177.36">177.36°</data></dd>
-          </dl>
-        </div>
-
-        <div class="details">
-          <h2 class="micro">Orbital Characteristics</h2>
-          <dl>
-            <dt>Aphelion</dt>
-            <dd><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
-            <dt>Perihelion</dt>
-            <dd><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
-            <dt>Orbital period</dt>
-            <dd><data value="224.701">224.701&nbsp;d</data></dd>
-            <dt>Average orbital speed</dt>
-            <dd><data value="35.02">35.02&nbsp;km/s</data></dd>
-          </dl>
+            <div class="details">
+              <h2 class="micro">Orbital Characteristics</h2>
+              <dl>
+                <dt>Aphelion</dt>
+                <dd><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
+                <dt>Perihelion</dt>
+                <dd><data value="107477000">107&nbsp;477&nbsp;000&nbsp;km</data></dd>
+                <dt>Orbital period</dt>
+                <dd><data value="224.701">224.701&nbsp;d</data></dd>
+                <dt>Average orbital speed</dt>
+                <dd><data value="35.02">35.02&nbsp;km/s</data></dd>
+              </dl>
+            </div>
+          </div>
         </div>
       </div>
-
     </div>
   </section>
 
