--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
             <div class="details">
-              <h2 class="micro">Physical characteristics</h2>
+              <h2 class="giga">Physical characteristics</h2>
               <dl>
                 <dt>Mean radius</dt>
                 <dd><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
@@ -38,7 +38,7 @@
             </div>
 
             <div class="details">
-              <h2 class="micro">Orbital Characteristics</h2>
+              <h2 class="giga">Orbital Characteristics</h2>
               <dl>
                 <dt>Aphelion</dt>
                 <dd><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
