--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <section class="section">
     <div>
 
-      <figure class="photo">
+      <figure class="max-length photo">
         <img class="img-flex" src="images/venus.jpg" alt="">
         <figcaption class="italic">A real-colour image of Venus.</figcaption>
       </figure>
+
       <div class="text-left">
         <div class="max-length">
           <div class="info">
-            <h1 class="yotta">Venus</h1>
+            <h1 class="zetta">Venus</h1>
             <p class="italic">Venus, the second planet in the Solar System.</p>
             <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
