--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
 
   <section class="section">
-    <div>
+    <div class="wrapper">
 
-      <figure class="max-length photo">
+      <figure class="max-length gutter-1-2 pad-top-double photo">
         <img class="img-flex" src="images/venus.jpg" alt="">
-        <figcaption class="italic">A real-colour image of Venus.</figcaption>
+        <figcaption class="italic milli island-1-8">A real-colour image of Venus.</figcaption>
       </figure>
 
-      <div class="text-left">
-        <div class="max-length">
+      <div class="text-left gutter-1-2">
+        <div class="wrapper">
           <div class="info">
-            <h1 class="zetta">Venus</h1>
-            <p class="italic">Venus, the second planet in the Solar System.</p>
+            <h1 class="push-0 pad-top peta">Venus</h1>
+            <p class="italic kilo">Venus, the second planet in the Solar System.</p>
             <p>Venus orbits the Sun every 224.7 Earth days. Venus is a terrestrial planet and is sometimes called Earth’s “sister planet” because of their similar size, gravity, and bulk composition. However, it has also been shown to be radically different from Earth in other respects.</p>
 
             <div class="details">
-              <h2 class="giga">Physical characteristics</h2>
+              <h2 class="mega gutter">Physical characteristics</h2>
               <dl>
                 <dt>Mean radius</dt>
                 <dd><data value="6051.8">6051.8±1.0&nbsp;km</data></dd>
@@ -39,7 +39,7 @@
             </div>
 
             <div class="details">
-              <h2 class="giga">Orbital Characteristics</h2>
+              <h2 class="mega gutter-2">Orbital Characteristics</h2>
               <dl>
                 <dt>Aphelion</dt>
                 <dd><data value="108939000">108&nbsp;939&nbsp;000&nbsp;km</data></dd>
